2008-09-03  Alper KANAT  <alperkanat@gmail.com>

	* media/js/raptiye.js, comments/views.py, users/views.py,
	templates/users/profile.html, templates/blog/comments.html: Removed all
	hardcoded stupid lines within ajax responses..
	* blog/views.py, templates/blog/homepage.html: Changed all messages into a
	tuple since I have to loop over the messages to read them..
	* extra/wordpress.py: changed the database name to wordpress..
	* templates/users/profile.html: gravatar popup now works with enter key..
	* users/views.py: fixed a bug that was a really stupid mistake..
	
2008-09-02  Alper KANAT  <alperkanat@gmail.com>

	* extra/wordpress.py: Fixed some importer bug..
	* users/views.py: Fixed a bug that I discovered by chance..
	
2008-09-01  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/links.html, templates/blog/comments.html: Fixed some layout
	problems..
	* media/css/style.css, polls/views.py, polls/templatetags/poll_filters.py,
	polls/urls.py, templates/blog/poll.html, templates/blog/sidebar.html: polls
	application is now complete..
	* settings-example.py: changed the release scheme.. will release raptiye
	with a beta status..
	* extra/wordpress.py: importer's daily wtf code is now complete..
	* extra/messages.py: added a new message for polls app..
	* comments/views.py: comments can save the datetime now.. was saving the
	datetime of creation before.. i did this because of older comments in
	wordpress database..
	* comments/models.py: author's ip can be empty or null..
	
2008-08-31  Alper KANAT  <alperkanat@gmail.com>

	* media/images/twitter.png, templates/blog/contact.html: added twitter page
	link..
	* media/css/style.css: fixed many css issues I saw after getting the real
	data from wordpress blog..
	* extra/tag_cloud.py: Tag cloud is correctly calculated now.. Should try
	with little numbers of tags too..
	* blog/urls.py: URL pattern resolving now works for more tags that have / or
	. characters in it..