@@ -1,6 +1,6 @@
 {% extends "frontpage/base.html" %}
 
-{% block title %}günlük@{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}
+{% block title %}{{ entry.title }}@gunluk.{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}
 
 {% block body %}
 	{% include "blog/sidebar.html" %}
